--- a/src/CVApp/Web/CVApp.Web/wwwroot/css/site.css
+++ b/src/CVApp/Web/CVApp.Web/wwwroot/css/site.css
@@ -1,5 +1,13 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
+.frame{
+    padding: 3em;
+    border: solid 1px;
+}
+
+.frame_hr{
+    border-bottom: double;
+}
 
 a.navbar-brand {
   white-space: normal;
