--- a/src/CVApp/Web/CVApp.Web/Views/Education/Edit.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/Education/Edit.cshtml
@@ -1,6 +1,4 @@
-﻿@model CVApp.ViewModels.Education.EducationEditViewModel
-
-
+﻿@model CVApp.ViewModels.Education.EducationViewModels.EducationEditViewModel
 
 <div class="container">
     <div class="row">
@@ -9,86 +7,87 @@
             <hr />
             <form method="post" id="educationForm">
                 <div asp-validation-summary="All" class="text-danger"></div>
-                <input asp-for="@Model.InputVM.ResumeId" type=hidden value="@Model.InputVM.ResumeId" />
                 <div class="form-element">
                     <div class="form-group">
-                        <label asp-for="@Model.InputVM.Institution">Institution Name</label>
-                        <input asp-for="@Model.InputVM.Institution" class="form-control" value="@Model.InputVM.Institution">
-                        <span asp-validation-for="@Model.InputVM.Institution" class="text-danger"></span>
+                        <label asp-for="Institution" class="font-weight-bold text-secondary"></label>
+                        <input asp-for="Institution" class="form-control" value="@Model.Institution">
+                        <span asp-validation-for="Institution" class="text-danger"></span>
                     </div>
                     <div class="form-row">
                         <!--DatePicker from Tempus Dominus-->
-                        <div class='col-md-4'>
+                        <div class='col-md-6'>
                             <div class="form-group">
-                                <label asp-for="@Model.InputVM.FromYear">Start year</label>
-                                <div class="input-group date" id="datetimepicker7" data-target-input="nearest">
-                                    <input asp-for="@Model.InputVM.FromYear" type="text" class="form-control datetimepicker-input" data-target="#datetimepicker7" value="@Model.InputVM.FromYear" />
-                                    <span asp-validation-for="@Model.InputVM.FromYear" class="text-danger"></span>
-                                    <div class="input-group-append" data-target="#datetimepicker7" data-toggle="datetimepicker">
+                                <label asp-for="@Model.StartDate" class="font-weight-bold text-secondary"></label>
+                                <div class="input-group date" id="datetimepickerMonthYears1" data-target-input="nearest">
+                                    <input asp-for="@Model.StartDate" type="text" class="form-control datetimepicker-input" data-target="#datetimepickerMonthYears1" value="@Model.StartDate.ToString("MM/yyyy")" />
+                                    <div class="input-group-append" data-target="#datetimepickerMonthYears1" data-toggle="datetimepicker">
                                         <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                                     </div>
                                 </div>
+                                <span asp-validation-for="@Model.StartDate" class="text-danger"></span>
                             </div>
                         </div>
-                        <div class='col-md-4'>
+                        <div class='col-md-6'>
                             <div class="form-group">
-                                <label asp-for="@Model.InputVM.ToYear">End year</label>
-                                <div class="input-group date" id="datetimepicker8" data-target-input="nearest">
-                                    <input asp-for="@Model.InputVM.ToYear" type="text" class="form-control datetimepicker-input" data-target="#datetimepicker8" value="@Model.InputVM.ToYear" />
-                                    <span asp-validation-for="@Model.InputVM.ToYear" class="text-danger"></span>
-                                    <div class="input-group-append" data-target="#datetimepicker8" data-toggle="datetimepicker">
+                                <label asp-for="@Model.EndDate" class="font-weight-bold text-secondary"></label>
+                                <div class="input-group date" id="datetimepickerMonthYears2" data-target-input="nearest">
+                                    <input asp-for="@Model.EndDate" type="text" class="form-control datetimepicker-input" data-target="#datetimepickerMonthYears2" value=@(Model.EndDate.HasValue ? Model.EndDate.Value.ToString("MM/yyyy") : string.Empty) />
+                                    <div class="input-group-append" data-target="#datetimepickerMonthYears2" data-toggle="datetimepicker">
                                         <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                                     </div>
                                 </div>
+                                <span asp-validation-for="@Model.EndDate" class="text-danger"></span>
                             </div>
                         </div>
-                        <div class="form-group col-md-4">
-                            <label asp-for="@Model.InputVM.GPA">GPA</label>
-                            <input asp-for="@Model.InputVM.GPA" class="form-control" value="@Model.InputVM.GPA">
-                            <span asp-validation-for="@Model.InputVM.GPA" class="text-danger"></span>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="@Model.InputVM.Diploma">Diploma Title</label>
-                        <input asp-for="@Model.InputVM.Diploma" class="form-control" value="@Model.InputVM.Diploma">
-                        <span asp-validation-for="@Model.InputVM.Diploma" class="text-danger"></span>
-                    </div>
-                    <div class="form-group" style="padding: 1px;">
-                        <label asp-for="@Model.InputVM.MainSubjects">Main Subjects</label>
-                        <textarea asp-for="@Model.InputVM.MainSubjects" class="form-control myTextarea" rows="5" value="@Html.Raw(Model.InputVM.MainSubjects)"></textarea>
-                        <span asp-validation-for="@Model.InputVM.MainSubjects" class="text-danger"></span>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label asp-for="@Model.InputVM.Country">Country</label>
-                            <select asp-for="@Model.InputVM.Country" class="form-control countries order-alpha" id="countryId">
-                                <option value="" ></option>
-                            </select>
-                            <span asp-validation-for="@Model.InputVM.Country" class="text-danger"></span>
+                            <label asp-for="Diploma" class="font-weight-bold text-secondary"></label>
+                            <input asp-for="Diploma" class="form-control" value="@Model.Diploma">
+                            <span asp-validation-for="Diploma" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-6">
-                            <label asp-for="@Model.InputVM.Region">Region</label>
-                            <select asp-for="@Model.InputVM.Region" class="form-control states order-alpha" id="stateId">
-                                <option value="@Model.InputVM.Region">@Model.InputVM.Region</option>
+                            <label asp-for="GPA" class="font-weight-bold text-secondary"></label>
+                            <input asp-for="GPA" type="number" min="2.0" class="form-control" value="@Model.GPA">
+                            <span asp-validation-for="GPA" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="form-group" style="padding: 1px;">
+                        <label asp-for="@Model.MainSubjects" class="font-weight-bold text-secondary"></label>
+                        <tinymceEditor asp-for="@Model.MainSubjects" placeholder="@Model.MainSubjects"></tinymceEditor>
+                        <span asp-validation-for="@Model.MainSubjects" class="text-danger"></span>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label asp-for="@Model.Country" class="font-weight-bold text-secondary"></label>
+                            <select asp-for="@Model.Country" class="form-control countries order-alpha" id="countryId">
+                                <option value=""></option>
                             </select>
-                            <span asp-validation-for="@Model.InputVM.Region" class="text-danger"></span>
+                            <span asp-validation-for="@Model.Country" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-6">
-                            <label asp-for="@Model.InputVM.City">City</label>
-                            <select asp-for="@Model.InputVM.City" class="form-control cities order-alpha" id="cityId">
-                                <option value="@Model.InputVM.City">@Model.InputVM.City</option>
+                            <label asp-for="@Model.Region" class="font-weight-bold text-secondary"></label>
+                            <select asp-for="@Model.Region" class="form-control states order-alpha" id="stateId">
+                                <option value="@Model.Region">@Model.Region</option>
                             </select>
-                            <span asp-validation-for="@Model.InputVM.City" class="text-danger"></span>
+                            <span asp-validation-for="@Model.Region" class="text-danger"></span>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label asp-for="@Model.City" class="font-weight-bold text-secondary"></label>
+                            <select asp-for="@Model.City" class="form-control cities order-alpha" id="cityId">
+                                <option value="@Model.City">@Model.City</option>
+                            </select>
+                            <span asp-validation-for="@Model.City" class="text-danger"></span>
                         </div>
                     </div>
                     <hr />
                 </div>
-                <div class="row">
+                <div class="row justify-content-between">
                     <div class="col-md-6">
-                        <button type="submit" asp-route-Id="@Model.Id" class="btn btn-primary">Save</button>
+                        <button data-message="Are you sure you want to change this education info." onclick="TriggerModal(event)" type="submit" asp-route-id="@Model.Id" class="btn btn-success">Save</button>
                     </div>
                     <div class="col-md-auto">
-                        <a href="javascript:void(0);" onclick="history.go(-1);" class="btn btn-info" role="button">Back</a>
+                        <a href="javascript:void(0);" onclick="history.go(-1);" class="btn btn-dark" role="button">Back</a>
                     </div>
                 </div>
             </form>
@@ -98,23 +97,7 @@
 
 @section Scripts {
     <script>
-        $(document).ready(function () {
-
-            InitTinymce();
-
-            AddDateTimePicker();
-        });
-
-    setTimeout(function () {$('#datetimepicker7').datetimepicker(
-        'date', moment('@Model.InputVM.FromYear.ToString("MM/YYYY")', 'MM/YYYY')
-    ); }, 500);
-
-    setTimeout(function () {$('#datetimepicker8').datetimepicker(
-        'date', moment('@Model.InputVM.ToYear.ToString("MM/YYYY")', 'MM/YYYY')
-    ); }, 500);
-
-    setTimeout(function(){$('#countryId').val('@Model.InputVM.Country').attr('select', 'selected'); }, 3000);
-
+        setTimeout(function(){$('#countryId').val('@Model.Country').attr('select', 'selected'); }, 3000);
     </script>
     <partial name="_ValidationScriptsPartial" />
 }
