--- a/src/CVApp/Web/CVApp.Web/Views/Language/Delete.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/Language/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model CVApp.ViewModels.Language.LanguageEditViewModel
+﻿@model CVApp.ViewModels.Language.LanguageViewModels.LanguageEditViewModel
 
 <div class="container">
     <div class="row">
@@ -6,24 +6,23 @@
             <h2>Languages</h2>
             <hr />
             <form method="post">
-                <input asp-for="@Model.InputVM.ResumeId" type="hidden" />
                 <div class="form-group">
-                    <label asp-for="@Model.InputVM.Name">Language Name</label>
-                    <input asp-for="@Model.InputVM.Name" class="form-control" value="@Model.InputVM.Name" readonly>
+                    <label asp-for="@Model.Name" class="font-weight-bold text-secondary"></label>
+                    <input asp-for="@Model.Name" class="form-control" value="@Model.Name" readonly>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label asp-for="@Model.InputVM.Level">Level</label>
-                        <input asp-for="@Model.InputVM.Level" class="form-control" value="@Model.InputVM.Level" readonly>
+                        <label asp-for="@Model.Level" class="font-weight-bold text-secondary"></label>
+                        <input asp-for="@Model.Level" class="form-control" value="@Model.Level" readonly>
                     </div>
                 </div>
                 <hr />
-                <div class="row">
+                <div class="row justify-content-between">
                     <div class="col-md-6">
-                        <button data-message="Are you sure you want to delete this language." onclick="TriggerModal(event)" type="submit" asp-route-Id="@Model.Id" class="btn btn-danger">Delete</button>
+                        <button data-message="Are you sure you want to delete this language?" onclick="TriggerModal(event)" type="submit" asp-route-id="@Model.Id" class="btn btn-danger">Delete</button>
                     </div>
                     <div class="col-md-auto">
-                        <a href="javascript:void(0);" onclick="history.go(-1);" class="btn btn-info" role="button">Back</a>
+                        <a href="javascript:void(0);" onclick="history.go(-1);" class="btn btn-dark" role="button">Back</a>
                     </div>
                 </div>
             </form>
