--- a/src/CVApp/Web/CVApp.Web/Views/Language/Index.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/Language/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model CVApp.ViewModels.Language.LanguageInputViewModel
+﻿@model CVApp.ViewModels.Language.LanguageViewModels.LanguageInputViewModel
 
 <div class="container">
     <div class="row">
@@ -8,13 +8,13 @@
             <form method="post">
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Name">Language name</label>
+                    <label asp-for="Name" class="font-weight-bold text-secondary"></label>
                     <input asp-for="Name" class="form-control" placeholder="Language name">
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label asp-for="Level">Level</label>
+                        <label asp-for="Level" class="font-weight-bold text-secondary"></label>
                         <select asp-for="Level" class="form-control languageLavel order-alpha" id="levelId">
                             <option value="">Select Level</option>
                         </select>
@@ -35,7 +35,6 @@
 @section Scripts {
 <script>
     $(document).ready(function () {
-
         SetLanguageLevelDropdown();
     });
 </script>
