--- a/src/CVApp/Web/CVApp.Web/Views/PersonalInfo/Edit.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/PersonalInfo/Edit.cshtml
@@ -1,81 +1,86 @@
-﻿@model CVApp.ViewModels.PersonalInfo.PersonalInfoViewModel
+﻿@model CVApp.ViewModels.PersonalInfo.PersonalInfoViewModels.PersonalInfoEditViewModel
 
 <div class="container">
     <div class="row">
         <div class="col-md-8 offset-2">
-            <h2>Personal Information</h2>
+            <h2> Edit Personal Information</h2>
             <hr />
 
             <form method="post" enctype="multipart/form-data" asp-controller="PersonalInfo" asp-action="Index">
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label asp-for="FirstName">First name</label>
+                        <label asp-for="FirstName" class="font-weight-bold text-secondary"></label>
                         <input asp-for="FirstName" class="form-control" value="@Model.FirstName">
                         <span asp-validation-for="FirstName" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-6">
-                        <label asp-for="LastName">Last name</label>
+                        <label asp-for="LastName" class="font-weight-bold text-secondary"></label>
                         <input asp-for="LastName" class="form-control" value="@Model.LastName">
                         <span asp-validation-for="LastName" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label asp-for="Email">Email</label>
+                        <label asp-for="Email" class="font-weight-bold text-secondary"></label>
                         <input asp-for="Email" class="form-control" value="@Model.Email">
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-6">
-                        <label asp-for="PhoneNumber">Phone Number</label>
+                        <label asp-for="PhoneNumber" class="font-weight-bold text-secondary"></label>
                         <input asp-for="PhoneNumber" class="form-control" value="@Model.PhoneNumber">
                         <span asp-validation-for="PhoneNumber" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label asp-for="DateOfBirth">Date of birth</label>
-                        <input asp-for="DateOfBirth" type="text" class="form-control" value="@Model.DateOfBirth.ToShortDateString()" readonly>
-                        <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+                    <div class='col-md-6'>
+                        <div class="form-group">
+                            <label asp-for="DateOfBirth" class="font-weight-bold text-secondary"></label>
+                            <div class="input-group date" id="datetimepickerDate" data-target-input="nearest">
+                                <input asp-for="DateOfBirth" type="text" class="form-control datetimepicker-input" data-target="#datetimepickerDate" value="@Model.DateOfBirth.ToShortDateString()" />
+                                <div class="input-group-append" data-target="#datetimepickerDate" data-toggle="datetimepicker">
+                                    <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                                </div>
+                            </div>
+                            <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+                        </div>
                     </div>
                     <div class="form-group col-md-6">
-                        <label asp-for="RepoProfile">Portfolio</label>
+                        <label asp-for="RepoProfile" class="font-weight-bold text-secondary"></label>
                         <input asp-for="RepoProfile" type="url" class="form-control" value="@Model.RepoProfile">
                         <span asp-validation-for="RepoProfile" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label asp-for="Picture">Picture:</label>
-                        <input asp-for="Picture" type="file" class="form-control-file">
+                        <label asp-for="Picture" class="font-weight-bold text-secondary"></label>
+                        <input asp-for="Picture" type="file" class="form-control-file" value=" ">
                         <span asp-validation-for="Picture" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-6">
-                        <label asp-for="CurrentPicture">Current Picture</label>
+                        <label asp-for="CurrentPicture" class="font-weight-bold text-secondary"></label>
                         <div class="input-group">
                             <input asp-for="CurrentPicture" type="url" class="form-control" value="@Model.CurrentPicture" readonly>
                             <div class="input-group-append ml-3">
-                                <a href="javascript:void(0);" data-url="@Model.CurrentPicture" class="deleteItem" style="color:red" data-toggle="tooltip" data-placement="top" title="Delete current picture">X</a>
+                                <a href="javascript:void(0); " data-url="@Model.CurrentPicture" class="deleteItem" style="color:red" data-toggle="tooltip" data-placement="top" title="Delete current picture">X</a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Address">Address</label>
+                    <label asp-for="Address" class="font-weight-bold text-secondary"></label>
                     <input asp-for="Address" class="form-control" value="@Model.Address">
                     <span asp-validation-for="Address" class="text-danger"></span>
                 </div>
                 <div class="form-group" style="padding: 1px;">
-                    <label asp-for="Summary">Summary</label>
-                    <textarea id="mytextarea" asp-for="Summary" class="form-control" rows="5" value=@Html.Raw(Model.Summary)></textarea>
+                    <label asp-for="Summary" class="font-weight-bold text-secondary"></label>
+                    <tinymceEditor asp-for="@Model.Summary" placeholder="@Model.Summary"></tinymceEditor>
                     <span asp-validation-for="Summary" class="text-danger"></span>
                 </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <button type="submit" class="btn btn-primary">Save</button>
-                    </div>
+                <div class="row justify-content-between">
+                    <button data-message="Are you sure you want to change this peronal info." onclick="TriggerModal(event)" type="submit" class="btn btn-success" asp-route-id="@Model.Id">Save</button>
                     <div class="col-md-auto">
-                        <a href="javascript:void(0);" onclick="history.go(-1);" class="btn btn-info" role="button">Back</a>
+                        <a href="javascript:void(0);" onclick="history.go(-1);" class="btn btn-dark" role="button">Back</a>
                     </div>
                 </div>
             </form>
@@ -85,18 +90,7 @@
 
 @section Scripts {
     <script>
-        tinymce.init({
-            selector: '#mytextarea',
-            pulugins: ["lists advlist"],
-            toolbar: "undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent "
-        });</script>
-
-    <script>
-        $('.deleteItem').click(function (e) {
-            e.preventDefault();
-            var $ctrl = $(this);
-
-            if (confirm('Do you really want to delete this file?')) {
+            $('.deleteItem').click(function(e) {
                 $.ajax({
                     url: "/PersonalInfo/DeletePicture",
                     method: 'POST',
@@ -111,9 +105,7 @@
                 }).catch(function (error) {
                     alert(error + "There is something wrong. Please try again.");
                 })
-
-            }
-        });
+            });
     </script>
 
     <partial name="_ValidationScriptsPartial" />
