--- a/src/CVApp/Web/CVApp.Web/Views/Work/Edit.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/Work/Edit.cshtml
@@ -1,87 +1,86 @@
-﻿@model CVApp.ViewModels.Work.WorkEditViewModel
+﻿@model CVApp.ViewModels.Work.WorkViewModels.WorkEditViewModel
 
 <div class="container">
     <div class="row">
         <div class="col-md-8 offset-2">
-            <h2>Work</h2>
+            <h2> Edit Work</h2>
             <hr />
             <form method="post">
                 <div asp-validation-summary="All" class="text-danger"></div>
-                <input asp-for="@Model.InputVM.ResumeId" type=hidden value="@Model.InputVM.ResumeId" />
                 <div class="form-element">
                     <div class="form-group">
-                        <label asp-for="@Model.InputVM.Company">Employer</label>
-                        <input asp-for="@Model.InputVM.Company" class="form-control" value="@Model.InputVM.Company">
-                        <span asp-validation-for="@Model.InputVM.Company" class="text-danger"></span>
+                        <label asp-for="@Model.Company" class="font-weight-bold text-secondary"></label>
+                        <input asp-for="@Model.Company" class="form-control" value="@Model.Company">
+                        <span asp-validation-for="@Model.Company" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="@Model.InputVM.Title">Job Title</label>
-                        <input asp-for="@Model.InputVM.Title" class="form-control" value="@Model.InputVM.Title">
-                        <span asp-validation-for="@Model.InputVM.Title" class="text-danger"></span>
+                        <label asp-for="@Model.Title" class="font-weight-bold text-secondary"></label>
+                        <input asp-for="@Model.Title" class="form-control" value="@Model.Title">
+                        <span asp-validation-for="@Model.Title" class="text-danger"></span>
                     </div>
                     <div class="form-row">
                         <!--DatePicker from Tempus Dominus-->
                         <div class='col-md-6'>
                             <div class="form-group">
-                                <label asp-for="@Model.InputVM.FromYear">Start year</label>
-                                <div class="input-group date" id="datetimepicker7" data-target-input="nearest">
-                                    <input asp-for="@Model.InputVM.FromYear" type="text" class="form-control datetimepicker-input" data-target="#datetimepicker7" value="" />
-                                    <span asp-validation-for="@Model.InputVM.FromYear" class="text-danger"></span>
-                                    <div class="input-group-append" data-target="#datetimepicker7" data-toggle="datetimepicker">
+                                <label asp-for="@Model.StartDate" class="font-weight-bold text-secondary"></label>
+                                <div class="input-group date" id="datetimepickerMonthYears1" data-target-input="nearest">
+                                    <input asp-for="@Model.StartDate" type="text" class="form-control datetimepicker-input" data-target="#datetimepickerMonthYears1" value="@Model.StartDate.ToString("MM/yyyy")" />
+                                    <div class="input-group-append" data-target="#datetimepickerMonthYears1" data-toggle="datetimepicker">
                                         <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                                     </div>
                                 </div>
+                                <span asp-validation-for="@Model.StartDate" class="text-danger"></span>
                             </div>
                         </div>
                         <div class='col-md-6'>
                             <div class="form-group">
-                                <label asp-for="@Model.InputVM.ToYear">End year</label>
-                                <div class="input-group date" id="datetimepicker8" data-target-input="nearest">
-                                    <input asp-for="@Model.InputVM.ToYear" type="text" class="form-control datetimepicker-input" data-target="#datetimepicker8" value="" />
-                                    <span asp-validation-for="@Model.InputVM.ToYear" class="text-danger"></span>
-                                    <div class="input-group-append" data-target="#datetimepicker8" data-toggle="datetimepicker">
+                                <label asp-for="@Model.EndDate" class="font-weight-bold text-secondary"></label>
+                                <div class="input-group date" id="datetimepickerMonthYears2" data-target-input="nearest">
+                                    <input asp-for="@Model.EndDate" type="text" class="form-control datetimepicker-input" data-target="#datetimepickerMonthYears2" value=@(Model.EndDate.HasValue ? Model.EndDate.Value.ToString("MM/yyyy") : string.Empty) />
+                                    <div class="input-group-append" data-target="#datetimepickerMonthYears2" data-toggle="datetimepicker">
                                         <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                                     </div>
                                 </div>
+                                <span asp-validation-for="@Model.EndDate" class="text-danger"></span>
                             </div>
                         </div>
                     </div>
                     <div class="form-group" style="padding: 1px;">
-                        <label asp-for="@Model.InputVM.Description">Job Description</label>
-                        <textarea asp-for="@Model.InputVM.Description" class="form-control myTextarea" rows="5"></textarea>
-                        <span asp-validation-for="@Model.InputVM.Description" class="text-danger"></span>
+                        <label asp-for="@Model.Description" class="font-weight-bold text-secondary"></label>
+                        <tinymceEditor asp-for="@Model.Description" placeholder="@Model.Description"></tinymceEditor>
+                        <span asp-validation-for="@Model.Description" class="text-danger"></span>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label asp-for="@Model.InputVM.Country">Country</label>
-                            <select asp-for="@Model.InputVM.Country" class="form-control countries order-alpha" id="countryId">
+                            <label asp-for="@Model.Country" class="font-weight-bold text-secondary"></label>
+                            <select asp-for="@Model.Country" class="form-control countries order-alpha" id="countryId">
                                 <option value="">Select Country</option>
                             </select>
-                            <span asp-validation-for="@Model.InputVM.Country" class="text-danger"></span>
+                            <span asp-validation-for="@Model.Country" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-6">
-                            <label asp-for="@Model.InputVM.Region">Region</label>
-                            <select asp-for="@Model.InputVM.Region" class="form-control states order-alpha" id="stateId">
-                                <option value="@Model.InputVM.Region">@Model.InputVM.Region</option>
+                            <label asp-for="@Model.Region" class="font-weight-bold text-secondary"></label>
+                            <select asp-for="@Model.Region" class="form-control states order-alpha" id="stateId">
+                                <option value="@Model.Region">@Model.Region</option>
                             </select>
-                            <span asp-validation-for="@Model.InputVM.Region" class="text-danger"></span>
+                            <span asp-validation-for="@Model.Region" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-6">
-                            <label asp-for="@Model.InputVM.City">City</label>
-                            <select asp-for="@Model.InputVM.City" class="form-control cities order-alpha" id="cityId">
-                                <option value="@Model.InputVM.City">@Model.InputVM.City</option>
+                            <label asp-for="@Model.City" class="font-weight-bold text-secondary"></label>
+                            <select asp-for="@Model.City" class="form-control cities order-alpha" id="cityId">
+                                <option value="@Model.City">@Model.City</option>
                             </select>
-                            <span asp-validation-for="@Model.InputVM.City" class="text-danger"></span>
+                            <span asp-validation-for="@Model.City" class="text-danger"></span>
                         </div>
                     </div>
                     <hr />
                 </div>
-                <div class="row">
+                <div class="row justify-content-between">
                     <div class="col-md-6">
-                        <button type="submit" asp-route-Id="@Model.Id" class="btn btn-primary">Save</button>
+                        <button data-message="Are you sure you want to change this work info." onclick="TriggerModal(event)" type="submit" asp-route-id="@Model.Id" class="btn btn-success">Save</button>
                     </div>
                     <div class="col-md-auto">
-                        <a href="javascript:void(0);" onclick="history.go(-1);" class="btn btn-info" role="button">Back</a>
+                        <a href="javascript:void(0);" onclick="history.go(-1);" class="btn btn-dark" role="button">Back</a>
                     </div>
                 </div>
             </form>
@@ -91,22 +90,7 @@
 
 @section Scripts {
     <script>
-        $(document).ready(function () {
-
-            InitTinymce();
-
-            AddDateTimePicker();
-        });
-
-    setTimeout(function () {$('#datetimepicker7').datetimepicker(
-        'date', moment('@Model.InputVM.FromYear.ToString("MM/YYYY")', 'MM/YYYY')
-    ); }, 500);
-
-    setTimeout(function () {$('#datetimepicker8').datetimepicker(
-        'date', moment('@Model.InputVM.ToYear.HasValue?Model.InputVM.Value.ToString("MM/YYYY"): ""', 'MM/YYYY')
-    ); }, 500);
-
-    setTimeout(function(){$('#countryId').val('@Model.InputVM.Country').attr('select', 'selected'); }, 3000);
+        setTimeout(function(){$('#countryId').val('@Model.Country').attr('select', 'selected'); }, 3000);
     </script>
     <partial name="_ValidationScriptsPartial" />
 }
